--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
   justify-content: center;
   height: 100vh;
   background-color: var(--bg-color);
-  transition: background-color 1s;
+  transition: background-color var(--transition-duration);
 }
 
 .menu {
@@ -31,7 +31,7 @@ body {
   height: 100px;
   border-radius: 50%;
   position: relative;
-  transition: 1s;
+  transition: transform var(--transition-duration);
 }
 
 .menu .menu_item::before {
@@ -44,7 +44,7 @@ body {
   height: 100px;
   border-radius: 50%;
   z-index: -1;
-  transition: all 1s;
+  transition: transform var(--transition-duration);
   transform: scale(0);
 }
 
@@ -85,7 +85,6 @@ body {
   bottom: 51%;
   clip-path: url(#border);
   z-index: -1;
-  transition: transform 1s;
+  transition: var(--transition-duration);
   transform: translate(var(--translate-transform));
 }
-
